--- a/todo.yml
+++ b/todo.yml
@@ -1,12 +1,16 @@
 todo:
-
     Flask_App: 
-
         General:
-                - Refactor code with tokenizer and emove stop words and special characters
-                - Implement sentence_tokenizer
-                - Sentiment Analysis and Report
-                - Generate Report with Pandas 
+            - Implement sentence_tokenizer
+            - Sentiment Analysis and Report
+            - Generate Report with Pandas 
+
+        UI:
+            - Show 5 or 10 recent sources with "SELECT DISTINCT source from words ORDER BY source ASC LIMIT 5;"
+            - Show top words from recent sources
+            
+                
+            
 
     Dash_App:
         General:
