--- a/todo.yml
+++ b/todo.yml
@@ -1,17 +1,24 @@
 todo:
-    Flask_App: 
+    Flask_App:
+        
+        Basic Requirements:
+            - Show the result after scraping => Done
+            - Show the all results + Keyword search
+                - Keyword search
+                - Table of matched sources 
+
+
         General:
             - Implement sentence_tokenizer
             - Sentiment Analysis and Report
             - Generate Report with Pandas 
+            
 
         UI:
             - Show 5 or 10 recent sources with "SELECT DISTINCT source from words ORDER BY source ASC LIMIT 5;"
             - Show top words from recent sources
             
                 
-            
-
     Dash_App:
         General:
                 - Dash or Chart.js
