--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "python.pythonPath": "/home/masa/anaconda3/envs/firstapp/bin/python"
+    "python.pythonPath": "/home/masa/anaconda3/envs/firstapp/bin/python",
+    "python.linting.pylintEnabled": false,
+    "python.linting.flake8Enabled": true,
+    "python.linting.enabled": true
 }
