Add table showing all sentiments to sent-result & Cosmetic changes

--- a/todo.yml
+++ b/todo.yml
@@ -1,35 +1,30 @@
-todo:
-    Flask_App:
-        
+
+    Todo:    
+        Main App:
+            - Create Home Page
+            
+        Javascript:
+            - Refactor Code  
+
+    Future Consideration:
+        - No database
+
+#------------------------------------------------------------------------------------------#
+
+    Done:
+        Requirements:
+            - Implement sentence_tokenizer => Done
+            - Sentiment Analysis and Report => Done
         Basic Requirements:
             - Show the result after scraping => Done
-
             - Table for scrapeed result => Done
-
             - Navbar for Home - All Results => Done
-
             - Implement Sentiment Analyzer => Done
                 - Definition of Positive and negative sents => Done 
                     - Compound Score => Done
                 - Create new task =  Sentiment Analyzer => Done
-
-
-        Requirements:
-            - Implement sentence_tokenizer => Done
-            - Sentiment Analysis and Report => Done
-            - Create Home Page
-            - Change WordCounter result page
-
-            
         Visualization:
-                Chart.js:
-                    - change bar colors depending on the value (https://stackoverflow.com/questions/35633618/chart-js-bar-chart-color-change-based-on-value) => Done
-                Cosmetic Changes:
-                    - Change opacity of bars
-                    - Apply better coloring
-                Javascript:
-                    - Refactor Code  
-
-
-    Future Consideration:
-        - No database
+            Chart.js:
+                - change bar colors depending on the value => Done
+                - Change opacity of bars => Done
+                - Apply better coloring => Done
