--- a/todo.yml
+++ b/todo.yml
@@ -1,19 +1,14 @@
 
     Todo:    
-        Main App:
-            - Create Home Page
-            
         Javascript:
             - Refactor Code
                 - turn into object with methods
                 - export as module
 
-    Future Consideration:
-        - Docker-compose
-        - Mongo-version
-        - No database
-            - Redis (https://github.com/dmitrypol/redis101 & https://github.com/dmitrypol/redis_data)
-            - Mongo DB (https://docs.mongodb.com/manual/tutorial/expire-data/)
+        Future Consideration:
+            - Docker-compose
+            - Mongo-version
+            - No database
 
 #------------------------------------------------------------------------------------------#
 
@@ -21,6 +16,7 @@
         Requirements:
             - Implement sentence_tokenizer => Done
             - Sentiment Analysis and Report => Done
+            - Create Landing Page
         Basic Requirements:
             - Show the result after scraping => Done
             - Table for scrapeed result => Done
