--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,29 @@
 version: "3"
 services:
     redis0:
-        image: "redis"
+        image: "redis:alpine"
         ports:
-            - "6378:6379"
+            - "6378:6378"
 
     redis1:
-        image: "redis"
+        image: "redis:alpine"
         ports:
             - "6379:6379"
 
-    # redis-queue:
-    #     image: "python3:alpine"
+    redis-queue:
+        image: "rq_python:latest"
+        command: rq worker --url redis://redis1:6379 redis://redis0:6378
+        depends_on:
+            - redis1
+            - redis0
+    flask:
+        image: "rq_python:latest"
+        command: python run.py
+        ports:
+            - 5000:5000
+        depends_on:
+            - redis1
+            - redis0
+     
+
+
