--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     redis0:
         image: "redis:alpine"
         ports:
-            - "6378:6378"
+            - "6378:6379"
 
     redis1:
         image: "redis:alpine"
@@ -12,7 +12,7 @@ services:
 
     redis-queue:
         image: "rq_python:latest"
-        command: rq worker --url redis://redis1:6379 redis://redis0:6378
+        command: rq worker --url redis://redis1:6379
         depends_on:
             - redis1
             - redis0
